src/DropdownLayout/DropdownLayout.scss
@import '../common.scss';
@import '../Typography/Typography.scss';

$option_height: 35px;
$big_option_hight: 47px;
$content_container_height: 260px;
$top-arrow-size: 8px;

.wrapper {
  box-sizing: border-box;
  position: relative;
  outline: none;
  border: none;
  width: 100%;
  display: flex;
  justify-content: center;
}

.options {
  position: relative;
  overflow: auto;
}

.content-container {
  background: $D80;
  border: none;
  border-radius: 8px;
  box-shadow: 0 0 16px 0 fade-out(black, 0.86);
  display: block;
  opacity: 0;
  overflow: auto;
  padding: 0;
  transition: opacity 0.2s ease;
  visibility: hidden;
  width: 100%;
  z-index: 6;
  position: absolute;
  left: 0;

  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.content-container {
  &.with-arrow {
    padding: 10px 0;
  }

  &.up {
    bottom: 0;
    margin-top: 15px;

    &.with-arrow {
      margin-bottom: $top-arrow-size;
    }
  }

  &.down {
    top: 0;
    margin-bottom: 15px;

    &.with-arrow {
      margin-top: $top-arrow-size;
    }
  }
}

.content-container.shown {
  visibility: visible;
  opacity: 1;
}

.options::-webkit-scrollbar {
  width: 16px;
  background-color: none;
}

.options::-webkit-scrollbar-button {
  height:6px;
}

.options::-webkit-scrollbar-thumb  {
  background-color: rgba(110, 181, 241, 0.45);
  border-radius: 10px;
  background-clip: padding-box;
  border: 4px solid rgba(0, 0, 0, 0);
  height: 58px;
}

.options::-webkit-scrollbar-thumb:hover  {
  background-color: $B30;
}

.options::-webkit-scrollbar-thumb:active {
  background-color: $B00;
}

.option {
  line-height: 1.5;
  overflow: hidden;
  text-overflow: ellipsis;
  text-align: left;
  padding: 6px 20px 6px 24px;
  @include FontLight();

  font-size: 16px;
  color: $D10;
  cursor: pointer;

  width:100%;
  display: flex;
  align-items: center;

  &.small-height {
    min-height: $option_height;
  }

  &.big-height {
    min-height: $big_option_hight;
  }
}

a[data-hook=link-item] {
  text-decoration: none;
}

.disabled {
  color: $D50;
  cursor: default;
}

.title {
  @extend .h4;
  background: $D70;
  color: $D20;
  font-size: 10px;
}

:global(.rtl) .option {
  text-align: right;
  padding-right: 24px;
  padding-left: 24px;
}

.option.hovered {
  background: $B50;
  color: $D10;
}

.option:focus {
  outline: none;
}

.option.selected {
  background-color: $B10;
  color: $D80;
}

.option.selected.hovered {
  background-color: $B20;
  color: $D80;
}

.divider {
  height: 1px;
  overflow: hidden;
  background-color: #e5e5e5;
  margin: 0;
}

.wrapper * {
  box-sizing:border-box;
}

.arrow {
  position: absolute;
  left: 50%;
  z-index: 10;
  transform: translateX(-50%)rotateZ(45deg);
  height: $top-arrow-size;
  width: $top-arrow-size;
  background: $D80;

  &.up {
    bottom: $top-arrow-size / 2;
    box-shadow: 3px 3px 8px rgba(0, 0, 0, .1);
  }

  &.down {
    top: $top-arrow-size / 2;
    box-shadow: -3px -3px 8px rgba(0, 0, 0, .1);
  }
}

.theme {
  &-b2b {
    .content-container {
      border-radius: 0;
    }

    .option {
      @include FontLight();
      color: #8090a2;
      font-size: 16px;
    }

    .option.selected {
      background-color: #5cb4ff;
      color: $D80;
    }

    .option.selected.hovered {
      background-color: #71c4f6;
      color: $D80;
    }

    .options::-webkit-scrollbar {
      width: 14px;
    }

    .options::-webkit-scrollbar-thumb {
      border-radius: 100px;
      background-color: rgba(182, 193, 205, 0.5);
      background-clip: padding-box;
      box-sizing: border-box;
      border: 4px solid rgba(0, 0, 0, 0);
    }
  }

  &-material {
    .content-container {
      &.up {
        bottom: 5px;
      }
      &.down {
        top: 5px;
      }
      .option {
        min-height: 36px;
        line-height: 36px;
        font-size: 15px;
        color: $D30;
      }
    }
  }
}

